贝塞尔曲线插值器

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,17 @@
          <!--android:layout_width="match_parent"-->
          <!--android:layout_height="match_parent" />-->
 
-     <mytest.com.mytest.PullView
-         android:id="@+id/pullView"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content" />
+     <!--<mytest.com.mytest.PullView-->
+         <!--android:id="@+id/pullView"-->
+         <!--android:layout_width="match_parent"-->
+         <!--android:layout_height="wrap_content" />-->
 
 
-     <!--<ImageView-->
-         <!--android:id="@+id/img"-->
-         <!--android:layout_width="wrap_content"-->
-         <!--android:layout_height="wrap_content"-->
-         <!--android:layout_marginTop="300dp"-->
-         <!--android:layout_gravity="center"-->
-         <!--android:src="@mipmap/ic_launcher"-->
-          <!--/>-->
+     <ImageView
+         android:id="@+id/img"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:src="@mipmap/ic_launcher"
+          />
 
 </LinearLayout>
