封装自定义表达式解释器

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,37 @@
          <!--android:layout_height="wrap_content" />-->
 
 
-     <ImageView
-         android:id="@+id/img"
+     <!--<ImageView-->
+         <!--android:id="@+id/img"-->
+         <!--android:layout_width="wrap_content"-->
+         <!--android:layout_height="wrap_content"-->
+         <!--android:src="@mipmap/ic_launcher"-->
+          <!--/>-->
+
+
+     <!--<mytest.com.mytest.TestView-->
+         <!--android:layout_width="match_parent"-->
+         <!--android:layout_height="match_parent" />-->
+
+     <Button
+         android:onClick="onClick"
+         android:id="@+id/pullView"
+         android:text="pullView"
          android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:src="@mipmap/ic_launcher"
-          />
+         android:layout_height="wrap_content" />
+
+     <Button
+         android:onClick="onClick"
+         android:id="@+id/dex"
+         android:text="加载Dex"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" />
+
+     <Button
+         android:onClick="onClick"
+         android:id="@+id/expression"
+         android:text="表达式"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" />
 
 </LinearLayout>
