--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-     <!--<mytest.com.mytest.besierView-->
-         <!--android:id="@+id/bview"-->
-         <!--android:layout_width="match_parent"-->
-         <!--android:layout_height="match_parent" />-->
-
-     <!--<mytest.com.mytest.PullView-->
-         <!--android:id="@+id/pullView"-->
-         <!--android:layout_width="match_parent"-->
-         <!--android:layout_height="wrap_content" />-->
-
-
-     <!--<ImageView-->
-         <!--android:id="@+id/img"-->
-         <!--android:layout_width="wrap_content"-->
-         <!--android:layout_height="wrap_content"-->
-         <!--android:src="@mipmap/ic_launcher"-->
-          <!--/>-->
-
-
-     <!--<mytest.com.mytest.TestView-->
-         <!--android:layout_width="match_parent"-->
-         <!--android:layout_height="match_parent" />-->
-
      <Button
          android:onClick="onClick"
          android:id="@+id/pullView"
@@ -50,5 +27,38 @@
          android:text="表达式"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
+
+     <Button
+         android:onClick="onClick"
+         android:id="@+id/tab"
+         android:text="tab"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" />
+
+    <Button
+        android:onClick="onClick"
+        android:id="@+id/xlh"
+        android:text="序列化"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:onClick="onClick"
+        android:id="@+id/fxlh"
+        android:text="反序列化"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:onClick="onClick"
+        android:id="@+id/xcc"
+        android:text="线程池"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+     <ImageView
+     android:id="@+id/img"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:src="@mipmap/ic_launcher"
+     />
 
 </LinearLayout>
